simple-longhorn-ingress/pod-longhorn-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-longhorn
  namespace: test-ingress
  labels:
    app: pod-test-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pod-test-ingress
  template:
    metadata:
      labels:
        app: pod-test-ingress
    spec:
      containers:
      - name: pod-test-ingress
        image: nginx:1.23.1-alpine
        imagePullPolicy: Always
        ports:
          - containerPort: 80
            protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 128Mi
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
          timeoutSeconds: 5
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 20
          periodSeconds: 60
          timeoutSeconds: 5
          failureThreshold: 5
        volumeMounts:
          - name: nginx-configuration
            mountPath: /etc/nginx/nginx.conf
            subPath: NGINX_CONF_KEY
          - name: application-configuration
            mountPath: /etc/nginx/nginx.d/app.conf
            subPath: APP_CONF_KEY
          - name: application-html
            mountPath: /usr/share/nginx/html/index.html
            subPath: APP_HTML_KEY
          - name: volv
            mountPath: /data
      volumes:
        - name: nginx-configuration
          secret:
            secretName: pod-test-ingress-secret
        - name: application-configuration
          secret:
            secretName: pod-test-ingress-secret
        - name: application-html
          secret:
            secretName: pod-test-ingress-secret
        - name: volv
          persistentVolumeClaim:
            claimName: pod-test-ingress-pvc
